HTFX-1243 - CATS-1243 - Amharic calander does not pass the correct date to filter viewmodel in request index page - is fixed

--- a/Web/Areas/EarlyWarning/Views/Request/Index.cshtml
+++ b/Web/Areas/EarlyWarning/Views/Request/Index.cshtml
@@ -226,6 +226,6 @@
 </script>
 <script type="text/javascript">
     $(function () {
-        $("#search").rules("remove");
+        //$("#search").rules("remove");
     });
 </script>
