--- a/Web/Areas/EarlyWarning/Views/Request/_FilterRequestLeftBar.cshtml
+++ b/Web/Areas/EarlyWarning/Views/Request/_FilterRequestLeftBar.cshtml
@@ -23,7 +23,7 @@
                         <div class="form-group">
                             <label class="col-md-3 control-label add-on">Start</label>
                             <div class="col-md-9">
-                                @Html.TextBoxFor(m => m.DateFromFormatted, new {@class = "form-control cats-datepicker2  ", @type = "text"})
+                                @Html.TextBoxFor(m => m.DateFrom, new {@class = "form-control cats-datepicker2  ", @type = "text"})
                             </div>
                         </div>
                     </div>
@@ -31,7 +31,7 @@
                         <div class="form-group">
                             <label class="col-md-3 control-label add-on">End</label>
                             <div class="col-md-9">
-                                @Html.TextBoxFor(m => m.DateToFormatted, new {@class = "form-control cats-datepicker2  ", @type = "text"})
+                                @Html.TextBoxFor(m => m.DateTo, new {@class = "form-control cats-datepicker2  ", @type = "text"})
                             </div>
                         </div>
                     </div>
