--- a/Web/Areas/EarlyWarning/Views/GiftCertificate/LetterTemplate.cshtml
+++ b/Web/Areas/EarlyWarning/Views/GiftCertificate/LetterTemplate.cshtml
@@ -33,7 +33,7 @@
             </div>
 
         <div class="modal-footer">
-            <button class="btn" data-dismiss="modal" aria-hidden="true">(@Html.Translate("Cancel"))</button>
+            <button class="btn" data-dismiss="modal" aria-hidden="true">@Html.Translate("Cancel")</button>
             @*<button  id="btnprintgift" class="btn btn-primary " type="submit">Print</button>*@
         </div>
 
