CATS-1223 has been solved.

--- a/Web/Areas/Regional/Views/Home/Index.cshtml
+++ b/Web/Areas/Regional/Views/Home/Index.cshtml
@@ -250,6 +250,7 @@
                                             <th class="number">{{requisition.Amount|number}} QT</th>
 
                                             <td><span class="label label-danger">{{requisition.Status}}</span></td>
+                                            @*Remove the view button*@
                                             @*<td>
                                                  <a ng-href="@Url.Action("Allocation", "ReliefRequisition", new { Area = "EarlyWarning", id = 2 })" class="btn btn-sm btn-default">
                                                     View <i class="icon-chevron-right"></i>
