--- a/Web/Areas/Settings/Views/FDP/Index.cshtml
+++ b/Web/Areas/Settings/Views/FDP/Index.cshtml
@@ -202,6 +202,7 @@
 <script>
     var selectedWoreda;
 
+
     function error_handler(e) {
         if (e.errors) {
             var message = "Errors:\n";
@@ -213,6 +214,8 @@
                 }
             });
             alert(message);
+            e.Edit("onEdit");
+ 
         }
     }
 
