--- a/Web/Areas/Regional/Views/Home/Index.cshtml
+++ b/Web/Areas/Regional/Views/Home/Index.cshtml
@@ -442,10 +442,10 @@
                                     <tbody>
 
 
-                                        <tr class="" ng-repeat="Distribution in getDistribution">
-                                            <td>{{Distribution.Plan}}</td>
+                                        <tr class="" ng-repeat="Distribution in Distribtion">
+                                            <td>{{Distribution.plan}}</td>
                                             <th>{{Distribution.Woreda}}</th>
-                                            <td>{{Distribution.FDPs}}</td>
+                                            <td>{{Distribution.Fdps}}</td>
                                            
                                             
                                         </tr>
