dispached amount remaninig amount fix

--- a/Web/Areas/Hub/Views/ReceiveNew/Create.cshtml
+++ b/Web/Areas/Hub/Views/ReceiveNew/Create.cshtml
@@ -130,7 +130,7 @@
                         }
                         else
                         {
-                            @Html.TextBoxFor(model => model.ReceiptDate, new { @readonly = true, @class = "form-control" })
+                            @Html.TextBoxFor(model => model.ReceiptDate, new { @readonly = true, @class = "cats-date-pref form-control" })
 
                         }
                         @*@Html.TextBoxFor(model => model.ReceiptDate, new {@class = "cats-datepicker2", @readonly = Model.EditbleDateGap})*@
