--- a/Web/Areas/Hub/Views/ReceiveNew/Create.cshtml
+++ b/Web/Areas/Hub/Views/ReceiveNew/Create.cshtml
@@ -12,7 +12,7 @@
 @section Toolbar
 {
     <a class="btn toolbar-btn " data-buttontype="btn_save" data-submittedform="frm_receive"></a>
-    <a class="btn toolbar-btn " data-buttontype="btn_cancel" href="#" title="Cancel"></a>
+    <a class="btn toolbar-btn " data-buttontype="btn_cancel" href="@Url.Action("Index", "Receive", new { Area = "Hub" })" title="Cancel"></a>
 }
 
 <h4 class="page-header">@Html.Translate("Receive")</h4>
